# MyCPPToyProject

./: README.md
CasinoNumberGuessing/: CMakeLists.txt  Cassino.cpp  Cassino.h  Player.cpp  Player.h  main.cpp
LoginAndRegistrationSystem/: CMakeLists.txt  LoginConsole.cpp  LoginConsole.h  main.cpp
MedialInformationSystem/: CMakeLists.txt
RockScissorPaper/: CMakeLists.txt  main.cpp  status.cpp  status.h
